# databricks-pdf-ocr

./: .coverage  .env.example  .gitignore  CLAUDE.md  CODE_REVIEW_2025-07-20.md  MANIFEST.in  PDF_OCR_PIPELINE_SPEC.md  README.md  TASKS.md  TODO  UAT.md  core_pdf_processor.py  databricks.yml  databricks_claude_ocr.py  pyproject.toml  requirements.txt  run.sh  settings.toml  tidbits.md
.github/workflows/: ci.yml
examples/: basic_usage.py  batch_processing.py
output/: .gitkeep
resources/: classic_cluster_jobs.yml.example
src/databricks_pdf_ocr/: __init__.py  __main__.py  config.py  main.py  schemas.py  sync.py
src/databricks_pdf_ocr/clients/: __init__.py  claude.py
src/databricks_pdf_ocr/config/: __init__.py  settings.py
src/databricks_pdf_ocr/handlers/: __init__.py  autoloader.py  base.py  ocr_processor.py
src/databricks_pdf_ocr/jobs/: run_autoloader.py  run_ocr.py
src/databricks_pdf_ocr/managers/: __init__.py  state.py
src/databricks_pdf_ocr/processors/: __init__.py  ocr.py
src/databricks_pdf_ocr/schemas/: __init__.py  tables.py
src/databricks_pdf_ocr/sync/: README.md  __init__.py  __main__.py  cli.py  pdf_sync.py
src/databricks_pdf_ocr/utils/: __init__.py  claude_client.py  common.py  spark.py  state_manager.py
src/pdf_parse_claude/: __init__.py  cli.py  databricks_claude_ocr.py
tests/: __init__.py  test_autoloader_handler.py  test_base_handler.py  test_claude_client.py  test_databricks_claude_ocr.py  test_ocr_processor.py  test_state_manager.py  test_sync.py
tests/integration/: __init__.py  conftest.py  test_autoloader_integration.py  test_ocr_integration.py  test_sync_integration.py
tests/integration/fixtures/: mock_responses.json
